--- a/style.css
+++ b/style.css
@@ -81,21 +81,20 @@ body{
 .main{
     width: 100%;
     margin-top: 150px;
-    padding-left: 120px;
     font-family: 'Poppins';
+    
 }
 .qmsomos{
-    width:100%;
-    height: 300px;
     display: flex;
-    padding-bottom: 0px;
+    padding-bottom: 5px;
 }
 .main p{
-    width: 700px;
+    max-width: 700px;
 }
 .pq{
     display: flex;
     text-align: end;
+    padding-bottom: 10;
 }
 .footer{
     width: 100%;
@@ -103,9 +102,9 @@ body{
     background-color: rgb(29, 29, 29);
     color: white;
     font-family: 'Poppins';
+    
 }
-
-
-
-
-
+.footer p{
+    font-size: 12px;
+    margin: auto;
+}
